<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40C4FF"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        tools:context="com.alttab.vcu.storyboard.ProfileActivity">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_account_circle_black_100dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="First name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:maxLength="15"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="Last Name"
            android:maxLength="15"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:maxLength="25"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignStart="@+id/editText3"
            android:layout_below="@+id/editText3"
            android:ems="10"
            android:hint="Bio"
            android:maxLength="70"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText4"
            android:layout_below="@+id/editText4"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:maxLength="22"
            android:hint="Location"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Profile_Update"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="Submit Changes"
            android:textSize="16sp"
            android:textStyle="normal|bold" />


    </RelativeLayout>
    </LinearLayout>