...
               android:hint="Location"
               android:textAlignment="center"
               android:textSize="18sp"
               android:textStyle="bold" />

           <Button
               android:id="@+id/ProfileEdit"
               style="@android:style/Widget.Button"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:layout_alignParentStart="true"
               android:text="Edit"
               android:textSize="16sp"
               android:textStyle="normal|bold" />

           <TextView
               android:id="@+id/editText"
               android:layout_width="wrap_content"
...
