...
        android:id="@+id/action_create_new"
        android:title="Create A Story"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile_view"
        android:title="Profile"
        app:showAsAction="ifRoom"/>




    <!-- Settings, should always be in the overflow -->
...
