<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40C4FF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to the Storyboard" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="417dp"
        android:background="@android:color/holo_purple"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:text="@string/button_login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:background="@android:color/holo_purple"
        android:layout_marginStart="113dp"
        android:layout_toEndOf="@+id/button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/button_logout" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logout"
        android:layout_alignStart="@+id/textView"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:maxHeight="20dp"
        android:maxWidth="30dp"
        android:minHeight="100dp"
        android:minWidth="10dp"
        android:scaleType="fitCenter" />

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@+id/logout"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="143dp"-->
        <!--android:layout_marginBottom="21dp"-->
        <!--android:adjustViewBounds="true"-->
        <!--app:srcCompat="@drawable/rotatedbook" />-->


    <!--<Button-->
    <!--android:id="@+id/unlockbutton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Button"-->
    <!--tools:layout_editor_absoluteX="47dp"-->
    <!--tools:layout_editor_absoluteY="42dp" />-->

    <!--<Button-->
    <!--android:id="@+id/login"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="googlelogin"-->
    <!--tools:layout_editor_absoluteX="244dp"-->
    <!--tools:layout_editor_absoluteY="40dp" />-->


</RelativeLayout>








